Center download button extra links on Mobile page (Bug 699985)
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@99080 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/mobile-download.css
+++ b/style/covehead/mobile-download.css
@@ -198,9 +198,9 @@
 }
 
 #download .download-other {
-    width: auto;
-    text-align: inherit;
-    margin: auto;
+    width: 300px;
+    text-align: center;
+    margin: 0;
 }
 
 #main-feature p#firefox-home {
